--- a/src/Trace/views/achievement/medal/modify.html
+++ b/src/Trace/views/achievement/medal/modify.html
@@ -80,40 +80,53 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-4">
-                        <div class="form-group form-md-line-input">
-                            <label class="col-md-4 control-label">系列</label>
-                            <div class="col-md-8">
-                                <select ng-model="vm.achi.category1"
-                                        class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
-                                        ng-class="{'edited':vm.achi.category1>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
-                                <div class="form-control-focus"> </div>
-                            </div>
+                    <div class="col-xs-8">
+                        <div class="col-xs-4">
+                            <div class="form-group form-md-line-input">
+                                <label class="col-md-4 control-label">系列</label>
+                                <div class="col-md-8">
+                                    <select ng-model="vm.achi.category1"
+                                            class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                            ng-class="{'edited':vm.achi.category1>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
+                                    <div class="form-control-focus"> </div>
+                                </div>
 
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="form-group form-md-line-input">
+                                <div class="col-md-12">
+                                    <select ng-model="vm.achi.category2"
+                                            class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
+                                            ng-class="{'edited':vm.achi.category2>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
+                                    <div class="form-control-focus"> </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="form-group form-md-line-input">
+                                <div class="col-md-12">
+                                    <select ng-model="vm.achi.category3"
+                                            class="form-control edited" ui-validate="'$value>0'"
+                                            ng-class="{'edited':vm.achi.category3>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
+                                    <div class="form-control-focus"> </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="form-group form-md-line-input">
-                            <div class="col-md-12">
-                                <select ng-model="vm.achi.category2"
-                                        class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
-                                        ng-class="{'edited':vm.achi.category2>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
-                                <div class="form-control-focus"> </div>
+                            <div class="form-group form-md-line-input">
+                                <label class="col-md-4 control-label">Url</label>
+                                <div class="col-md-8">
+                                    <input type="url" class="form-control" ng-class="{'edited':vm.achi.url}" placeholder="Url"
+                                           required ng-model="vm.achi.url">
+                                    <div class="form-control-focus"> </div>
+                                </div>
                             </div>
-
-                        </div>
                     </div>
-                    <div class="col-xs-4">
-                        <div class="form-group form-md-line-input">
-                            <div class="col-md-12">
-                                <select ng-model="vm.achi.category3"
-                                        class="form-control edited" ui-validate="'$value>0'"
-                                        ng-class="{'edited':vm.achi.category3>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
-                                <div class="form-control-focus"> </div>
-                            </div>
-
-                        </div>
-                    </div>
+              
                 </div>
 
                 <div class="row">
