--- a/src/Trace/views/manager/customers/index.html
+++ b/src/Trace/views/manager/customers/index.html
@@ -36,7 +36,7 @@
                     <label class="col-md-3 control-label">地区:</label>
                     <div class="col-md-9 input-group input-group-sm">
                         <div class="input-group-control">
-                            <input type="text" class="form-control input-sm" placeholder="地区" ng-model="vm.filter.area">
+                            <input type="text" class="form-control input-sm" placeholder="地区" ng-model="vm.filter.city">
                         </div>
                         <span class="input-group-btn btn-right">
                             <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
@@ -54,27 +54,23 @@
                         <th>手机号</th>
                         <th>性别</th>
                         <th>生日</th>
-                        <th>所在城市</th>
                         <th>积分</th>
                         <th>成就</th>
                         <th>纪念章</th>
-                        <th>登陆密码</th>
                         <th>称号</th>
                         <!--<th>操作</th>-->
                     </tr>
                 </thead>
                 <tbody>
                     <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.user_name}}</td>
                         <td>{{row.nick_name}}</td>
-                        <td>*********</td>
-                        <td>{{row.status==1?'启用':'禁用'}}</td>
-                        <td>{{row.create_time}}</td>
-                        <td>{{row.create_time}}</td>
-                        <td>{{row.create_time}}</td>
-                        <td>{{row.create_time}}</td>
-                        <td>{{row.create_time}}</td>
-                        <td>{{row.create_time}}</td>
+                        <td>{{row.mobile}}</td>
+                        <td>{{row.sex==1?'男':'女'}}</td>
+                        <td>{{row.birthday}}</td>
+                        <td>{{row.integration_val}}</td>
+                        <td>{{row.achievement_val}}</td>
+                        <td>{{row.badge_count}}</td>
+                        <td>{{row.designation}}</td>
                         <!--<td>
                             <a href="#" ng-click="vm.edit(row)">
                                 修改
