--- a/src/Trace/views/onlinemall/order/index.html
+++ b/src/Trace/views/onlinemall/order/index.html
@@ -1,15 +1,14 @@
 ﻿<div ng-controller="views.onlinemall.figure.index as vm">
     <div class="page-bar">
-        <div class="col-xs-8">
+        <div class="col-xs-9">
             <ul class="page-breadcrumb">
-
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">在线商城订单</a>
+                    <a href="#">积分详情订单</a>
                 </li>
             </ul>
         </div>
-        <div class="col-xs-4 right">
+        <div class="col-xs-3 right">
             <ul class="page-breadcrumb" style="float: right">
                 <li>
                     <button class="btn btn-sm blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
@@ -17,63 +16,73 @@
             </ul>
         </div>
 
+
     </div>
     <div class="portlet light bordered">
         <div class="row">
-                <div class="col-xs-6">
+            <div class="row">
+                <div class="col-xs-3">
                     <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label">类型</label>
+                        <label class="col-md-4 control-label">状态</label>
                         <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state" class="form-control edited" ui-validate="'$value>0'" ng-options="m.id as m.name for m in vm.states"></select>
+                            <select ng-model="vm.table.filter.state"
+                                    class="form-control edited" ui-validate="'$value>0'"
+                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
                             <div class="form-control-focus"> </div>
                         </div>
                     </div>
                 </div>
-            <div class="col-xs-5">
-                <div class="form-group form-md-line-input has-info">
-                    <div class="input-group input-group-sm">
-                        <div class="input-group-control">
-                            <input type="text" class="form-control input-sm" placeholder="商品名称" ng-model="vm.table.filter.name">
+                <div class="col-xs-5">
+                    <div class="form-group form-md-line-input has-info">
+                        <div class="input-group input-group-sm">
+                            <div class="input-group-control">
+                                <input type="text" class="form-control input-sm" placeholder="按条件搜索" ng-model="vm.table.filter.name">
+                            </div>
+                            <span class="input-group-btn btn-right">
+                                <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
+                            </span>
                         </div>
-                        <span class="input-group-btn btn-right">
-                            <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
-                        </span>
                     </div>
                 </div>
+
             </div>
-           
 
         </div>
         <div class="row">
             <table st-table="vm.table.data" class="table table-striped">
                 <thead>
                     <tr>
-                        <th st-sort="a">产品名称</th>
-                        <th>创建时间</th>
-                        <th>创建人</th>
-                        <th>位置</th>
+                        <th>单号</th>
+                        <th>订单名称</th>
+                        <th>数量</th>
+                        <th>价格</th>
+                        <th>运费</th>
+                        <th>收货人</th>
+                        <th>手机号</th>
                         <th>状态</th>
-                        <th>链接</th>
                         <th>操作</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.a}}</td>
-                        <td>{{row.b}}</td>
-                        <td>{{row.c}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
-                        <td>{{row.email}}</td>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
+                        <td>{{row.order_num}}</td>
+                        <td>{{row.order_name}}</td>
+                        <td>{{row.order_count}}</td>
+                        <td>{{row.product_cost}}</td>
+                        <td>{{row.courier_cost}}</td>
+                        
+                        <td>{{row.receiver}}</td>
+                        <td>{{row.phone}}</td>
+                        <td>{{row.order_state==0?'未兑换':(row.courier_order==null?'未发货':'已发货')}}</td>
                         <td>
-                            <a href="#"  ng-click="vm.modify(row)" >
-                                修改
+                            <a href="#"  ng-click="vm.detail(row)" >
+                                详情
                             </a>
-                            <a href="#"  ng-click="vm.low(row)" >
-                                下线
+                            <a ng-if="row.courier_order" href="#" ng-click="vm.postage(row)">
+                                快递信息
                             </a>
-                            <a href="#"  ng-click="vm.delete(row)" >
-                                删除
+                            <a ng-if="!row.courier_order" href="#" ng-click="vm.post(row)">
+                                发货
                             </a>
                         </td>
                     </tr>
