--- a/src/Trace/views/integralmall/index.html
+++ b/src/Trace/views/integralmall/index.html
@@ -63,7 +63,7 @@
             <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
-                        <th st-sort="a">攻略名称</th>
+                        <th st-sort="a">商品名称</th>
                         <th>创建时间</th>
                         <th>兑换积分</th>
                         <th>库存</th>
