--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -68,10 +68,10 @@
                     </div>
                     <div class="row">
                         <div class="form-group form-md-line-input has-success">
-                            <label class="col-md-2 control-label">纪念章介绍</label>
+                            <label class="col-md-2 control-label">规格</label>
                             <div class="col-md-10">
                                 <textarea class="form-control" rows="3" ng-class="{'edited':vm.product.badge_introduce}"
-                                          placeholder="纪念章介绍" ng-model="vm.product.badge_introduce"></textarea>
+                                          placeholder="规格" ng-model="vm.product.badge_introduce"></textarea>
                             </div>
                         </div>
                     </div>
