--- a/src/Trace/views/achievement/trace/modify.html
+++ b/src/Trace/views/achievement/trace/modify.html
@@ -83,7 +83,7 @@
                     <div class="col-xs-8">
                         <div class="col-xs-4">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-4 control-label">系列</label>
+                                <label class="col-md-4 control-label">分类</label>
                                 <div class="col-md-8">
                                     <select ng-model="vm.achi.category1"
                                             class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
