--- a/src/Trace/views/manager/roles/modal.html
+++ b/src/Trace/views/manager/roles/modal.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label">角色名称</label>
+                        <label class="col-md-4 control-label">权限名称</label>
                         <div class="col-md-8">
                             <input type="text" class="form-control" placeholder="角色名称" maxlength="120"
                                    ng-class="{'edited':vm.role.name}" required ng-model="vm.role.name">
