--- a/src/Trace/views/onlinemall/figure/modal.html
+++ b/src/Trace/views/onlinemall/figure/modal.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="tile-object">
                                 <div class="name"> 限制 </div>
-                                <div class="number"> 100x100 </div>
+                                <div class="number"> 750*280px </div>
                             </div>
                         </div>
                     </div>
