修改上传插件

--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <ueditor config="editorConfig" ng-model="vm.product.content">
+                <ueditor style="height:500px;" config="editorConfig" ng-model="vm.product.content">
                 </ueditor>
             </div>
 
