--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -93,7 +93,7 @@
                                         </div>
                                         <div class="tile-object">
                                             <div class="name"> 限制 </div>
-                                            <div class="number"> 150x150 </div>
+                                            <div class="number"> 750*280px </div>
                                         </div>
                                     </div>
                                 </div>
