修改图片尺寸

--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -86,7 +86,7 @@
                                     </div>
                                     <div class="tile-object">
                                         <div class="name"> 限制 </div>
-                                        <div class="number"> 150x150 </div>
+                                        <div class="number"> 750*280px</div>
                                     </div>
                                 </div>
                            
@@ -303,8 +303,8 @@
                                             <i class="fa fa-cloud-upload"></i>
                                         </div>
                                         <div class="tile-object">
-                                            <div class="name"> 限制 </div>
-                                            <div class="number"> 750*280px </div>
+                                            <div class="name"> 无限制 </div>
+                                            <div class="number"> </div>
                                         </div>
                                     </div>
                                     <!--<ol>
