--- a/src/Trace/views/onlinemall/order/index.html
+++ b/src/Trace/views/onlinemall/order/index.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="views.onlinemall.figure.index as vm">
+﻿<div ng-controller="views.onlinemall.order.index as vm">
     <div class="page-bar">
         <div class="col-xs-9">
             <ul class="page-breadcrumb">
