--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-xs-4">
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">上线时间:</label>
                                 <div class="col-md-9">
@@ -171,7 +171,18 @@
                             </div>
 
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-4">
+                            <div class="md-checkbox">
+                                <input type="checkbox" id="checkbox17" ng-model="vm.product.is_perfect"
+                                       ng-click="!vm.product.is_perfect" class="md-check">
+                                <label for="checkbox17">
+                                    <span></span>
+                                    <span class="check"></span>
+                                    <span class="box"></span> 是否精品
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
                             <div class="form-group form-md-radios">
                                 <div class="md-radio-inline">
                                     <div class="md-radio">
