--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -113,7 +113,7 @@
                                         </div>
                                         <div class="tile-object">
                                             <div class="name"> 限制 </div>
-                                            <div class="number"> 100x100 </div>
+                                            <div class="number"> 132*132px </div>
                                         </div>
                                     </div>
 
@@ -121,7 +121,7 @@
                             </div>
                             <div ng-if="vm.file.model[1].url" class="col-xs-6">
                                 <div>
-                                    <img ng-click="vm.file.remove(1)" style="width:100px;height:100px;" ng-if="vm.file.model[1].url" src="{{vm.file.model[1].url}}" />
+                                    <img ng-click="vm.file.remove(1)" style="width:132px;height:132px;" ng-if="vm.file.model[1].url" src="{{vm.file.model[1].url}}" />
                                 </div>
                             </div>
                         </div>
