--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -130,7 +130,7 @@
                                 <div class="col-md-9">
                                     <!--ng-pattern="/^([1-9][0-9]*){1,9}$/"-->
                                     
-                                    <input type="number" ng-pattern="/^\d+\.\d+$/"
+                                    <input type="number" ng-pattern="/^[0-9]+([.]{1}[0-9]{1,2})?$/"
                                            class="form-control"
                                            ng-class="{'edited':vm.product.price}" placeholder="商品价格"
                                            required ng-model="vm.product.price">
