--- a/src/Trace/layouts/header.html
+++ b/src/Trace/layouts/header.html
@@ -3,7 +3,7 @@
     <!-- BEGIN LOGO -->
     <div class="page-logo">
         <a ui-sref="dashboard">
-            <img src="{{settings.layoutPath}}/img/efanlogo.png" style="width:120px;height:35px;" alt="logo" class="logo-default" /> </a>
+            <img src="{{settings.layoutPath}}/img/logo.png" style="width:120px;height:35px;" alt="logo"  /> </a>
         <div class="menu-toggler sidebar-toggler">
             <span></span>
             <!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
